--- a/guice-plug/pom.xml
+++ b/guice-plug/pom.xml
@@ -3,21 +3,21 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>morphia-parent</artifactId>
-		<groupId>com.google.code.morphia</groupId>
-		<version>1.1</version>
+		<groupId>com.github.jmkgreen.morphia</groupId>
+		<version>1.2</version>
 		<relativePath>../</relativePath>
 	</parent>
-	<groupId>com.google.code.morphia</groupId>
+	<groupId>${parent.groupId}</groupId>
 	<artifactId>morphia-guice-plug</artifactId>
-	<version>1.00-SNAPSHOT</version>
+	<version>0.99-SNAPSHOT</version>
 	<name>Guice Plugin</name>
 	<packaging>jar</packaging>
 	<dependencies>
 		<!-- automatically looses the optional dependencies -->
 		<dependency>
-			<groupId>com.google.code.morphia</groupId>
+			<groupId>${parent.groupId}</groupId>
 			<artifactId>morphia</artifactId>
-			<version>1.00-SNAPSHOT</version>
+			<version>${morphia.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
