--- a/gwt/pom.xml
+++ b/gwt/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../</relativePath>
 	</parent>
 
-	<groupId>com.google.code.morphia</groupId>
+	<groupId>${parent.groupId}</groupId>
 	<artifactId>gwt</artifactId>
 	<version>${morphia.version}</version>
 	<name>Morphia Google Web Toolkit Extension</name>
