--- a/jrebel-plug/pom.xml
+++ b/jrebel-plug/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>morphia-parent</artifactId>
-		<groupId>com.google.code.morphia</groupId>
-		<version>1.1</version>
+		<groupId>com.github.jmkgreen.morphia</groupId>
+		<version>1.2</version>
 		<relativePath>../</relativePath>
 	</parent>
-	<groupId>com.google.code.morphia</groupId>
+	<groupId>${parent.groupId}</groupId>
 	<artifactId>morphia-jrebel-plug</artifactId>
 	<version>1.00-SNAPSHOT</version>
 	<name>JRebel Plugin</name>
@@ -15,9 +15,9 @@
 	<dependencies>
 		<!-- automatically looses the optional dependencies -->
 		<dependency>
-			<groupId>com.google.code.morphia</groupId>
+			<groupId>${parent.groupId}</groupId>
 			<artifactId>morphia</artifactId>
-			<version>1.00-SNAPSHOT</version>
+			<version>${morphia.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -38,6 +38,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
 				<configuration>
 					<archive>
 						<manifestEntries>
