--- a/logging-slf4j/pom.xml
+++ b/logging-slf4j/pom.xml
@@ -4,12 +4,12 @@
 
 	<parent>
 		<artifactId>morphia-parent</artifactId>
-		<groupId>com.google.code.morphia</groupId>
-		<version>1.1</version>
+		<groupId>com.github.jmkgreen.morphia</groupId>
+		<version>1.2</version>
 		<relativePath>../</relativePath>
 	</parent>
 
-	<groupId>com.google.code.morphia</groupId>
+	<groupId>${parent.groupId}</groupId>
 	<artifactId>morphia-logging-slf4j</artifactId>
 	<version>1.00-SNAPSHOT</version>
 	<name>Logging via SLF4J</name>
@@ -18,9 +18,9 @@
 	<dependencies>
 		<!--  automatically looses the optional dependencies -->
 		<dependency>
-			<groupId>com.google.code.morphia</groupId>
+			<groupId>${parent.groupId}</groupId>
 			<artifactId>morphia</artifactId>
-			<version>1.00-SNAPSHOT</version>
+			<version>${morphia.version}</version>
 		</dependency>
 
 		<dependency>
