--- a/morphia/pom.xml
+++ b/morphia/pom.xml
@@ -2,17 +2,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
-		<groupId>com.google.code.morphia</groupId>
+		<groupId>com.github.jmkgreen.morphia</groupId>
 		<artifactId>morphia-parent</artifactId>
 		<version>1.2</version>
 		<relativePath>../</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.google.code.morphia</groupId>
+	<groupId>${parent.groupId}</groupId>
 	<artifactId>morphia</artifactId>
 	<packaging>jar</packaging>
-	<version>0.99.1-SNAPSHOT</version>
+	<version>0.100.0-SNAPSHOT</version>
 	<name>morphia</name>
 
 	<dependencies>
