--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.google.code.morphia</groupId>
+	<groupId>com.github.jmkgreen.morphia</groupId>
 	<artifactId>morphia-parent</artifactId>
 	<version>1.2</version>
 	<packaging>pom</packaging>
@@ -11,6 +11,10 @@
 
 	<url>http://code.google.com/p/morphia/</url>
 
+    <properties>
+        <morphia.version>0.100.0-SNAPSHOT</morphia.version>
+    </properties>
+
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -18,12 +22,6 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-
-	<scm>
-		<url>http://code.google.com/p/morphia/source/browse</url>
-		<connection>scm:svn:http://morphia.googlecode.com/svn/trunk</connection>
-		<developerConnection>scm:svn:https://morphia.googlecode.com/svn/trunk</developerConnection>
-	</scm>
 
 	<developers>
 		<developer>
@@ -61,18 +59,10 @@
 	</dependencies>
 
 	<build>
-	    <pluginManagement>
-	      <plugins>
-	        <plugin>
-	          <groupId>org.codehaus.mojo</groupId>
-	          <artifactId>gwt-maven-plugin</artifactId>
-	          <version>2.1.0</version>
-	        </plugin>
-	      </plugins>
-	    </pluginManagement>
 	 	<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
@@ -85,6 +75,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
+                <version>2.5</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
@@ -92,6 +83,7 @@
 			<plugin>
 				<groupId>com.mycila.maven-license-plugin</groupId>
 				<artifactId>maven-license-plugin</artifactId>
+                <version>1.9.0</version>
 				<configuration>
 					<header>src/etc/header.txt</header>
 				</configuration>
@@ -99,6 +91,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
+                <version>2.2</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -124,7 +117,6 @@
 							<goal>javadoc</goal>
 							<goal>jar</goal>
 						</goals>
-						<phase>site</phase>
 					</execution>
 				</executions>
 			</plugin>
@@ -167,23 +159,6 @@
 			</plugin>
 		</plugins>
 	</reporting>
-
-	<distributionManagement>
-		<site>
-			<id>morphia-googlecode</id>
-			<url>svn:https://morphia.googlecode.com/svn/site</url>
-		</site>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>morphia-googlecode</id>
-			<url>svn:https://morphia.googlecode.com/svn/mavenrepo</url>
-		</repository>
-		<snapshotRepository>
-			<uniqueVersion>true</uniqueVersion>
-			<id>morphia-googlecode</id>
-			<url>svn:https://morphia.googlecode.com/svn/mavenrepo</url>
-		</snapshotRepository>
-	</distributionManagement>
 
 	<modules>
 		<module>morphia</module>
