--- a/validation/pom.xml
+++ b/validation/pom.xml
@@ -4,12 +4,12 @@
 
 	<parent>
 		<artifactId>morphia-parent</artifactId>
-		<groupId>com.google.code.morphia</groupId>
-		<version>1.1</version>
+		<groupId>com.github.jmkgreen.morphia</groupId>
+		<version>1.2</version>
 		<relativePath>../</relativePath>
 	</parent>
 
-	<groupId>com.google.code.morphia</groupId>
+	<groupId>${parent.groupId}</groupId>
 	<artifactId>morphia-validation</artifactId>
 	<version>1.00-SNAPSHOT</version>
 	<name>JSR303 Validation</name>
@@ -18,9 +18,9 @@
 	<dependencies>
 		<!--  automatically looses the optional dependencies -->
 		<dependency>
-			<groupId>com.google.code.morphia</groupId>
+			<groupId>${parent.groupId}</groupId>
 			<artifactId>morphia</artifactId>
-			<version>1.00-SNAPSHOT</version>
+			<version>${morphia.version}</version>
 		</dependency>
 		
 		<dependency>
