Skip signing by default

--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
         </plugins>
         <extensions>
