--- a/morphia/pom.xml
+++ b/morphia/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.github.jmkgreen.morphia</groupId>
 	<artifactId>morphia</artifactId>
 	<packaging>jar</packaging>
-	<version>0.100.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>morphia</name>
 
 	<dependencies>
