--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,8 @@
         </dependency>
         <dependency>
             <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
+            <artifactId>junit-dep</artifactId>
+            <version>4.10</version>
             <type>jar</type>
             <scope>test</scope>
             <optional>false</optional>
