--- a/entityscanner-plug/pom.xml
+++ b/entityscanner-plug/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
-			<version>0.9.5-RC2</version>
+			<version>0.9.8</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>servlet-api</artifactId>
@@ -117,11 +117,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-   		<repository>
-			<id>reflections-repo</id>
-       			<name>Reflections Maven2 Repository</name>
-       			<url>http://reflections.googlecode.com/svn/repo</url>
-   		</repository>
-	</repositories>
 </project>
