--- a/no-proxy-deps-tests/pom.xml
+++ b/no-proxy-deps-tests/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<artifactId>morphia-parent</artifactId>
 		<groupId>com.github.jmkgreen.morphia</groupId>
-		<version>1.2.1</version>
+		<version>1.2.2-SNAPSHOT</version>
 		<relativePath>../</relativePath>
 	</parent>
 
 	<groupId>com.github.jmkgreen.morphia</groupId>
 	<artifactId>morphia-no-proxy-deps</artifactId>
-	<version>1.00</version>
+	<version>1.00.1-SNAPSHOT</version>
 	<name>morphia-no-proxy-deps</name>
 	<packaging>jar</packaging>
 	<build>
