--- a/no-proxy-deps-tests/pom.xml
+++ b/no-proxy-deps-tests/pom.xml
@@ -11,7 +11,6 @@
 
 	<groupId>com.github.jmkgreen.morphia</groupId>
 	<artifactId>morphia-no-proxy-deps</artifactId>
-	<version>1.00.1-SNAPSHOT</version>
 	<name>morphia-no-proxy-deps</name>
 	<packaging>jar</packaging>
 	<build>
@@ -39,7 +38,7 @@
 		<dependency>
 			<groupId>com.github.jmkgreen.morphia</groupId>
 			<artifactId>morphia</artifactId>
-			<version>${morphia.version}</version>
+            <version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
