--- a/validation/pom.xml
+++ b/validation/pom.xml
@@ -5,13 +5,11 @@
 	<parent>
 		<artifactId>morphia-parent</artifactId>
 		<groupId>com.github.jmkgreen.morphia</groupId>
-		<version>1.2.1</version>
-		<relativePath>../</relativePath>
+		<version>1.2.2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.github.jmkgreen.morphia</groupId>
 	<artifactId>morphia-validation</artifactId>
-	<version>1.00</version>
 	<name>JSR303 Validation</name>
 	<packaging>jar</packaging>
 
@@ -20,7 +18,7 @@
 		<dependency>
 			<groupId>com.github.jmkgreen.morphia</groupId>
 			<artifactId>morphia</artifactId>
-			<version>${morphia.version}</version>
+            <version>${project.version}</version>
 		</dependency>
 
 		<dependency>
