--- a/morphia/pom.xml
+++ b/morphia/pom.xml
@@ -1,32 +1,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<parent>
-		<groupId>com.github.jmkgreen.morphia</groupId>
-		<artifactId>morphia-parent</artifactId>
-		<version>1.2.2-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>com.github.jmkgreen.morphia</groupId>
+        <artifactId>morphia-parent</artifactId>
+        <version>1.2.2-SNAPSHOT</version>
+    </parent>
 
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.jmkgreen.morphia</groupId>
-	<artifactId>morphia</artifactId>
-	<packaging>jar</packaging>
-	<name>morphia</name>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.github.jmkgreen.morphia</groupId>
+    <artifactId>morphia</artifactId>
+    <packaging>jar</packaging>
+    <name>morphia</name>
 
-	<dependencies>
-		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib-nodep</artifactId>
-			<version>[2.1_3,)</version>
-			<type>jar</type>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.thoughtworks.proxytoys</groupId>
-			<artifactId>proxytoys</artifactId>
-			<version>1.0</version>
-			<type>jar</type>
-			<optional>true</optional>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.thoughtworks.proxytoys</groupId>
+            <artifactId>proxytoys</artifactId>
+        </dependency>
+    </dependencies>
 </project>
