--- a/jrebel-plug/pom.xml
+++ b/jrebel-plug/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
 	<groupId>com.github.jmkgreen.morphia</groupId>
-	<artifactId>morphia-jrebel-plug</artifactId>
+	<artifactId>morphia-jrebel-plugin</artifactId>
 	<name>JRebel Plugin</name>
 	<packaging>jar</packaging>
 
