--- a/validation/pom.xml
+++ b/validation/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>morphia-parent</artifactId>
 		<groupId>com.github.jmkgreen.morphia</groupId>
-		<version>1.2.2-SNAPSHOT</version>
+		<version>1.2.2</version>
 	</parent>
 
 	<groupId>com.github.jmkgreen.morphia</groupId>
