Fix version numbers

--- a/logging-slf4j/pom.xml
+++ b/logging-slf4j/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>morphia-parent</artifactId>
 		<groupId>com.github.jmkgreen.morphia</groupId>
-		<version>1.2.2</version>
+		<version>1.2.3-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.github.jmkgreen.morphia</groupId>
