--- a/morphia/pom.xml
+++ b/morphia/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.jmkgreen.morphia</groupId>
         <artifactId>morphia-parent</artifactId>
-        <version>1.2.2</version>
+        <version>1.2.3-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
