--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.jmkgreen.morphia</groupId>
     <artifactId>morphia-parent</artifactId>
-    <version>1.2.2</version>
+    <version>1.2.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Morphia Build</name>
@@ -272,20 +272,37 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <configuration>
-                    <message>Creating site for ${project.version}</message>
-                </configuration>
-            </plugin>
+                 <groupId>com.github.github</groupId>
+                 <artifactId>site-maven-plugin</artifactId>
+                 <configuration>
+                     <message>Creating site for ${project.version}</message>
+                 </configuration>
+                 <executions>
+                     <execution>
+                         <goals>
+                             <goal>site</goal>
+                         </goals>
+                         <phase>site</phase>
+                     </execution>
+                 </executions>
+             </plugin>
+
             <plugin>
                 <groupId>com.github.github</groupId>
                 <artifactId>downloads-maven-plugin</artifactId>
-                <configuration>
-                    <description>${project.version} release of ${project.name}</description>
-                    <override>true</override>
-                    <includeAttached>true</includeAttached>
-                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>upload</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                        <configuration>
+                            <description>${project.version} release of ${project.name}</description>
+                            <override>true</override>
+                            <includeAttached>true</includeAttached>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
 
