--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,14 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
                     <execution>
@@ -272,20 +280,20 @@
             </plugin>
 
             <plugin>
-                 <groupId>com.github.github</groupId>
-                 <artifactId>site-maven-plugin</artifactId>
-                 <configuration>
-                     <message>Creating site for ${project.version}</message>
-                 </configuration>
-                 <executions>
-                     <execution>
-                         <goals>
-                             <goal>site</goal>
-                         </goals>
-                         <phase>site</phase>
-                     </execution>
-                 </executions>
-             </plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <configuration>
+                    <message>Creating site for ${project.version}</message>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>site</phase>
+                    </execution>
+                </executions>
+            </plugin>
 
             <plugin>
                 <groupId>com.github.github</groupId>
@@ -305,19 +313,6 @@
                 </executions>
             </plugin>
         </plugins>
-
-        <extensions>
-            <extension>
-                <groupId>org.jvnet.wagon-svn</groupId>
-                <artifactId>wagon-svn</artifactId>
-                <version>1.12</version>
-            </extension>
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ftp</artifactId>
-                <version>2.3</version>
-            </extension>
-        </extensions>
 
         <pluginManagement>
             <plugins>
