--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <scm>
         <connection>scm:git:git@github.com:jmkgreen/morphia.git</connection>
         <developerConnection>scm:git:git@github.com:jmkgreen/morphia.git</developerConnection>
-        <url>git@github.com:jmkgreen/morphia.git</url>
+        <url>https://github.com/jmkgreen/morphia</url>
     </scm>
 
     <licenses>
