Stand alone fix for non-string keys in map with references. Cglib dependencies made optional, but added to morphia/pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -91,12 +91,14 @@
                 <groupId>com.thoughtworks.proxytoys</groupId>
                 <artifactId>proxytoys</artifactId>
                 <version>${proxytoys.version}</version>
+                <optional>true</optional>
             </dependency>
 
             <dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib-nodep</artifactId>
                 <version>${cglib-nodep.version}</version>
+                <optional>true</optional>
             </dependency>
 
             <dependency>
