--- a/morphia/pom.xml
+++ b/morphia/pom.xml
@@ -32,10 +32,11 @@
 			<artifactId>guice</artifactId>
 			<version>3.0</version>
 		</dependency>
-		<dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>inject</artifactId>
-			<version>1.0</version>
-		</dependency>
+<dependency>
+	<groupId>javax.inject</groupId>
+	<artifactId>javax.inject</artifactId>
+	<version>1</version>
+</dependency>
+            
 	</dependencies>
 </project>
