--- a/entityscanner-plug/pom.xml
+++ b/entityscanner-plug/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>morphia-parent</artifactId>
 		<groupId>com.github.jmkgreen.morphia</groupId>
-        <version>1.2.3</version>
+        <version>1.2.4-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.github.jmkgreen.morphia</groupId>
