--- a/morphia/pom.xml
+++ b/morphia/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.jmkgreen.morphia</groupId>
         <artifactId>morphia-parent</artifactId>
-        <version>1.2.3</version>
+        <version>1.2.4-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
