--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.jmkgreen.morphia</groupId>
     <artifactId>morphia-parent</artifactId>
-    <version>1.2.3</version>
+    <version>1.2.4-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Morphia Build</name>
@@ -45,7 +45,7 @@
         <connection>scm:git:git@github.com:jmkgreen/morphia.git</connection>
         <developerConnection>scm:git:git@github.com:jmkgreen/morphia.git</developerConnection>
         <url>https://github.com/jmkgreen/morphia</url>
-      <tag>morphia-parent-1.2.3</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <licenses>
