Fix issue #67: Support javax.persistence.Id

--- a/morphia/pom.xml
+++ b/morphia/pom.xml
@@ -26,5 +26,10 @@
             <groupId>com.thoughtworks.proxytoys</groupId>
             <artifactId>proxytoys</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 </project>
